# shipy

./: .gitignore  CHANGELOG.md  DEV.md  LICENSE  PRODUCTION.md  README.md  docs.md  philosophy.md  pyproject.toml  tutorial.md
.github/workflows/: release.yml
demo/app/views/: secret.html
demo/app/views/errors/: 404.html  500.html
demo/app/views/users/: new.html
demo/db/: schema.sql
demo/demo/: .gitignore
demo/demo/app/: main.py
demo/demo/app/views/home/: index.html
demo/demo/app/views/sessions/: login.html
demo/deploy/: demo-app.service  yourdomain.com.conf
examples/hello/app/: main.py
examples/hello/app/views/home/: 404.html  about.html  index.html
examples/hello/app/views/sessions/: login.html
examples/hello/app/views/todos/: list.html
examples/hello/app/views/users/: new.html
examples/hello/data/: schema.sql
examples/hello/db/: app.sqlite-shm  app.sqlite-wal  schema.sql
examples/hello/public/: base.css
shipy/: _log.py  app.py  auth.py  cli.py  csrf.py  flash.py  forms.py  render.py  session.py  sql.py
tests/: conftest.py  test_auth_flow.py  test_db_bootstrap.py
