[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipy"
version = "0.1.0"
description = "Opinionated indie-maker Python web framework for shipping MVPs stupid-fast."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["Jinja2>=3.1", "uvicorn>=0.30"]

[project.scripts]
shipy = "shipy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["shipy"]
