[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
# Use a unique distribution name on PyPI (since "shipy" is taken)
name = "shipy-web"
version = "0.2.0"
description = "The opinionated Indie Maker Python web framework for shipping MVPs stupid-fast."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rafael", email = "you@example.com" }]
keywords = ["web", "framework", "sqlite", "jinja2", "mvp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "jinja2>=3.1",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
bcrypt = ["bcrypt>=4.0"]
test = ["pytest>=8.0", "anyio>=4.0", "httpx>=0.27"]

[project.scripts]
# Users will still run `shipy` on the command line
shipy = "shipy.cli:main"

[project.urls]
Homepage = "https://github.com/yourname/shipy"
Issues   = "https://github.com/yourname/shipy/issues"

# Tell Hatch which code to ship (because dist name != package dir)
[tool.hatch.build.targets.wheel]
packages = ["shipy"]

[tool.hatch.build.targets.sdist]
include = ["shipy", "README.md", "LICENSE", "pyproject.toml"]
